# cpp-cmake-code-splitting-demo

./: CMakeLists.txt  flake.nix  run.sh
src/: CMakeLists.txt  greeter.cpp
src/include/: greeter.hpp
user-code/: CMakeLists.txt  main.cpp
